# lofor

./: .gitignore  README.md  cli.py  main.py  parser.py  pyproject.toml  reader.py  requirements.txt  setup.py  test.py
lofor/: cli.py
lofor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lofor/manager/: config.py
lofor/server/: http.py  serve.py
manager/: config.py
server/: http.py  serve.py
