[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lofor"
version = "0.0.3"
description = "Lofor is a lightweight development server which acts as a reverse proxy to solve your cors problems."
dynamic = ['readme']

[tools.setuptools]
packages = ["lofor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python_requires = ">=3.7"

[project.scripts]
lofor = "lofor.cli:handle_cli"